# 04lb

./: .gitignore  CMakeLists.txt  readme.md
docs/: GoogleTests.md
libs/: CMakeLists.txt
libs/array_common/: CMakeLists.txt
libs/array_common/include/: array_common.hpp
libs/array_common/src/: array_common.cpp
libs/common_math/: CMakeLists.txt
libs/common_math/include/: common_math.h
libs/common_math/src/: common_math.cpp
libs/mathlab/: CMakeLists.txt  mathlab.hpp
projects/: CMakeLists.txt
projects/l01/: CMakeLists.txt  main.cpp  readme.md
projects/l02/: CMakeLists.txt  l02.cbp  readme.md
projects/l03/: CMakeLists.txt  main.cpp  readme.md
projects/l03/calc/: calc.cpp  calc.hpp
projects/l04/: CMakeLists.txt  main.cpp  readme.md
projects/l04/logger/: logger.cpp  logger.hpp
projects/l05/: CMakeLists.txt  CmakeLists.txt  main.cpp  readme.md
projects/l06/: CMakeLists.txt  CmakeLists.txt  main.cpp  readme.md
projects/l07/: CMakeLists.txt  main.cpp  readme.md
projects/l08/: CMakeLists.txt  main.cpp  readme.md
projects/l09/: CMakeLists.txt  main.cpp  readme.md
projects/l10/: CMakeLists.txt  main.cpp  readme.md
projects/l11/: CMakeLists.txt  main.cpp  readme.md
projects/l12/: CMakeLists.txt  main.cpp  readme.md
projects/l13/: CMakeLists.txt  main.cpp  readme.md
projects/l14/: CMakeLists.txt  main.cpp  readme.md
projects/l17/: CMakeLists.txt  main.cpp  readme.md
projects/l18/: CMakeLists.txt  main.cpp  readme.md
projects/l19/: CMakeLists.txt  main.cpp  readme.md
projects/template/: CmakeLists.txt
src/: CmakeLists.txt  main.cpp
src/classes/: calc.cpp  calc.hpp
tests/: CMakeLists.txt
tests/gtests/: CMakeLists.txt
tests/gtests/array_common_tests/: CMakeLists.txt  array_common_test.cpp
